--- a/nc/db/noise_cancelling.lpc.html
+++ b/nc/db/noise_cancelling.lpc.html
@@ -16,6 +16,102 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >myBus|busMaster|spiReceiver_1|io_spi_mosi_buffercc</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >myBus|busMaster|spiReceiver_1|io_spi_ss_buffercc</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >myBus|busMaster|spiReceiver_1|io_spi_sclk_buffercc</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >myBus|busMaster|spiReceiver_1</TD>
+<TD >37</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >52</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >myBus|busMaster</TD>
+<TD >38</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >18</TD>
+<TD >69</TD>
+<TD >18</TD>
+<TD >18</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >myBus</TD>
+<TD >5</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >17</TD>
+<TD >34</TD>
+<TD >17</TD>
+<TD >17</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >dac</TD>
 <TD >19</TD>
 <TD >1</TD>
